# NLU-Assignment-2

./: .gitignore  README.md  pyproject.toml  run_pipeline.sh
B23CS1037-A2/: corpus.txt
dataset_generation/: run_scraper.py
dataset_generation/config/: settings.py
dataset_generation/scraper/: crawler.py  html_extractor.py  metadata.py  pdf_extractor.py
inference/: semantic_analysis.py
model_training/: train.py
preprocessing/: preprocess.py
q1/: README.md  run_pipeline.sh
q1/dataset_generation/: run_scraper.py
q1/dataset_generation/config/: __init__.py  settings.py
q1/dataset_generation/scraper/: __init__.py  content_filters.py  crawler.py  dedup.py  html_extractor.py  metadata.py  pdf_extractor.py  sitemap_parser.py
q1/inference/: semantic_analysis.py
q1/model_training/: train.py
q1/output/: dataset_stats.json  semantic_analysis_report.txt
q1/preprocessing/: preprocess.py
q1/visualization/: plot_embeddings.py
q1/word2vec/: __init__.py  artifacts.py  training.py
q2/: run_experiments.py
q2/dataset/: data.txt
q2/results/: attention_rnn_samples.txt  blstm_samples.txt  report.md  results.json  vanilla_rnn_samples.txt
visualization/: plot_embeddings.py
word2vec/: artifacts.py  training.py
